# TechzoneAcademyFrontDeskRender

./: .env.example  .gitignore  DEPLOYMENT_FIX.md  DEPLOYMENT_STEPS.md  EMAIL_OTP_FIX.md  IMPORT_FIX.md  LOGIN_TROUBLESHOOTING.md  Procfile  README.md  STARTUP_FIX.md  TROUBLESHOOTING.md  app.py  build.sh  deploy_to_render.md  env_example.txt  pyproject.toml  render.yaml  requirements.txt
portal flask/: AI_firebase.py  email_config.py  firebase_config.py  test_batch_summary.py
portal flask/static/: app.js  styles.css
portal flask/static/uploads/: trainer_techzone_report.xlsx
portal flask/templates/: dashboard_boss.html  dashboard_trainer.html  login.html  print_student.html  student_details.html  student_feedback.html  student_management.html  trainer_modules.html
portalflask/: AI_firebase.py  __init__.py  email_config.py  firebase_config.py
portalflask/static/: styles.css
portalflask/templates/: admin_management.html  admin_management_backup.html  batch_management.html  batch_summary.html  cleanup_files.html  dashboard_admin.html  dashboard_student.html  dashboard_trainer.html
static/: styles.css
static/uploads/: trainer_Updated_Business_Summary_Report_Template_2.docx
