[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techzone-portal"
version = "1.0.0"
description = "TechZone Academy Student Management System"
requires-python = ">=3.11,<3.12"
dependencies = [
    "Flask==2.2.5",
    "pandas==1.5.3",
    "numpy==1.24.3",
    "firebase-admin==6.2.0",
    "gunicorn==20.1.0",
    "python-dotenv==1.0.0",
    "Werkzeug==2.2.3",
]

[tool.setuptools]
packages = ["portalflask"]

[tool.setuptools.package-data]
portalflask = ["templates/*", "static/*"]
